# chat_sample

./: CMakeLists.txt  Readme.txt  UserInput.qml  main.qml  qml.qrc
include/: UserInput.h  chatCore.h
src/: UserInput.cpp  chatCore.cpp  main.cpp
